06-exercise/Ingress-GCP/hello-world-two-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gke-helloworld-two  
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gke-helloworld-two
