06-exercise/Ingress-GCP/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello-world-one/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gke-helloworld-one
            port:
              number: 80
      - path: /hello-world-two/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gke-helloworld-two
            port:
              number: 80
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gke-helloworld-one
            port:
              number: 80
